# kiss-xml

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: build-main.yml  build-staging.yml  code-coverage.yml  unit-test-main.yml  unit-test-staging.yml
.hooks/: hooks.py  install-hooks.py
src/: dom.rs  encodings.rs  errors.rs  lib.rs  parsing.rs
tests/: api_tests.rs  encoding_tests.rs  escaping_tests.rs  example1.rs  example2.rs  example3.rs  failure_handling.rs  integration_tests.rs  issues.rs  misc.rs  no_panic_test.rs  no_panic_tests.rs  simple.rs  some-file.xml
