[package]
name = "kiss_xml"
authors = ["Christopher Collin Hall"]
version = "1.0.5"
edition = "2021"
license = "MIT"
description = "An easy-to-use minimalist schema-less XML parsing library"
repository = "https://github.com/DrPlantabyte/kiss-xml"
homepage = "https://github.com/DrPlantabyte/kiss-xml/tree/main/"
readme = "README.md"
documentation = "https://docs.rs/kiss-xml/"
keywords = ["xml", "parser"]
categories = ["config", "parsing", "text-processing"] # see https://crates.io/category_slugs

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.rust]
missing_docs = "deny"
unused_must_use = "deny"

[dependencies]
dyn-clone = "1"
regex = "1"

[dev-dependencies]
tempfile = "3" # used for testing file I/O in API and unit tests
chrono = "0.4" # used in some exaples

[build-dependencies]
# no build dependencies
